# news-prisma

./: .env.example  README.md  pyproject.toml
scripts/: ask.py  index.py  ingest.py  inspect_retrieval.py
src/newsprisma/: config.py
src/newsprisma/agent/: graph.py  prompts.py  rag.py  state.py  tools.py
src/newsprisma/indexing/: chunker.py  embedder.py  store.py
src/newsprisma/ingestion/: article_parser.py  deduplicator.py  rss_fetcher.py  sources.yaml
src/newsprisma/utils/: language.py
